test/fail/match_float01.v3
//@execute 2147483647=false
def main(i: int) -> bool {
	match (i) {
		x: float => return true;
		_ => return false;
	}
}
